--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -6,7 +6,7 @@
 	  xmlns:f="http://java.sun.com/jsf/core"
 	  xmlns:p="http://primefaces.org/ui">
 <h:head>
-	<title>Home</title>
+	<title>App Teste Daniel</title>
 </h:head>
 <h:body>
 	<p:panel>
