--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -11,6 +11,9 @@
 <h:body>
 	<p:panel>
 		<h:outputText value="#{index.message}"/>
+                
+                <p:separator/>
+                Hi Daniel, estou apenas testanto, mas em breve sua aplicação também estará no ar!
 	</p:panel>
 </h:body>
 </html>
